--- a/simcon_project/templates/student_registration.html
+++ b/simcon_project/templates/student_registration.html
@@ -43,7 +43,7 @@
     {% endif %}
 
     <div class="card">
-        <div class="car-body">
+        <div class="card-body">
             <div class="col-md-6 mt-3">
                 <form method="post">
                     {%csrf_token%}
