--- a/simcon_project/templates/student_creation_modal.html
+++ b/simcon_project/templates/student_creation_modal.html
@@ -1,7 +1,7 @@
 <form method="post">
     {% csrf_token %}
     <div class="modal-header">
-        <h5 class="modal-title">Create Student</h5>
+        <h5 class="modal-title">Register Student</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -26,8 +26,7 @@
 
 
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" class="submit-btn btn btn-success">Send Invitation</button>
+        <button type="button" class="submit-btn btn btn-outline-secondary">Send Invitation</button>
     </div>
 
     <script>
