--- a/simcon_project/templates/student_management.html
+++ b/simcon_project/templates/student_management.html
@@ -41,7 +41,7 @@
                         </form>
                     </div>
                     <div class="col-3" style="text-align: right">
-                        <button id="create-student" class="btn btn-outline-secondary" type="button" name="button">Create Student</button>
+                        <button id="create-student" class="btn btn-outline-secondary" type="button" name="button">Register Student</button>
                     </div>
                 </div>
                 <div class="table-container" >
