--- a/simcon_project/templates/feedback/select_feedback_button.html
+++ b/simcon_project/templates/feedback/select_feedback_button.html
@@ -11,7 +11,7 @@
     </button>
 {% else %}
     <button
-        class="bs-modal btn btn-outline-primary" type="button" name="button"
+        class="bs-modal btn btn-outline-secondary" type="button" name="button"
         data-form-url="{% url 'feedback:view-feedback' record.id  %}"
         onclick="select_click(this)">
         Read
