--- a/simcon_project/templates/feedback/view_feedback_button.html
+++ b/simcon_project/templates/feedback/view_feedback_button.html
@@ -1,18 +1,18 @@
 <!--
     Button to see the list of feedback for an assigned template
- -->
+ -->  
 {% block content %}
     {% if record.feedback_read == False %}
     <button
-        class="bs-modal btn btn-outline-primary" type="button" name="button"
+        class="bs-modal btn btn-sm btn-outline-primary" type="button" name="button"
         data-form-url="{% url 'feedback:select-feedback' record.id record.conversation_templates__id  %}">
-        View New Feedback
+        Feedback
     </button>
     {% else %}
     <button
-        class="bs-modal btn btn-outline-primary" type="button" name="button"
+        class="bs-modal btn btn-sm btn-outline-secondary" type="button" name="button"
         data-form-url="{% url 'feedback:select-feedback' record.id record.conversation_templates__id  %}">
-        View Feedback
+        Feedback
     </button>
     {% endif %}
 {% endblock %}
