--- a/simcon_project/templates/researcher_base.html
+++ b/simcon_project/templates/researcher_base.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{% static './users/base.css' %}">
     <link rel="shortcut icon" href="{% static './title_image/favicon.ico' %}" type="image/x-icon">
@@ -22,12 +23,24 @@
         <ul class="nav navbar-collapse collapse">
           <li class="px-3">{% block nav-researcherView %}<a class="nav_bar_unselected" href="{% url 'researcher-view' %}">  <span >   Home   </span> </a>{% endblock %}</li>
           <li class="px-3">{% block nav-templateView %}<a class="nav_bar_unselected" href="{% url 'management:main' %}">  <span> Templates </span>  </a>{% endblock %}</li>
-          <li class="px-3">{% block nav-studentmanagementView %}<a class="nav_bar_unselected" href="{% url 'student-management' %}">   Student Management   </a>{% endblock %}</li>
-        <li class="px-3">{% block nav-assignmentmanagementView %}<a class="nav_bar_unselected" href="{% url 'ass-management:main' %}"><span>Assignments  </span>  </a>{% endblock %}</li>
+          <li class="px-3">{% block nav-studentmanagementView %}<a class="nav_bar_unselected" href="{% url 'student-management' %}">   Students   </a>{% endblock %}</li>
+            <li class="px-3">{% block nav-assignmentmanagementView %}<a class="nav_bar_unselected" href="{% url 'ass-management:main' %}"><span>Assignments  </span>  </a>{% endblock %}</li>
+            {% if user.is_staff %}
+                <li class="px-3">{% block nav-researcherManagementView %}<a class="nav_bar_unselected" href="{% url 'researcher-management' %}">   Researchers </a>{% endblock %}</li>
+            {% endif %}
         </ul>
         <ul class="nav navbar-nav justify-content-end">
-          <li class="px-3">{% block nav-settingsView %}<a class="nav_bar_unselected" href="{% url 'settings:main' %}"> Settings</a>{% endblock %}</li>
-          <li>{% block nav-logoutView %}<a class="nav_bar_unselected" href="{% url 'logout' %}"> Log Out</a>{% endblock %}</li>
+          <li class="px-3">{% block nav-settingsView %}<a class="nav_bar_unselected" href="{% url 'settings:main' %}"> 
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-gear-fill" viewBox="1 1 16 16">
+              <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+            </svg>
+            Settings</a>{% endblock %}</li>
+          <li>{% block nav-logoutView %}<a class="nav_bar_unselected" href="{% url 'logout' %}"> 
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 1 16 16">
+              <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+              <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+            </svg>
+            Log Out</a>{% endblock %}</li>
         </ul>
       </div>
     </nav>
