--- a/simcon_project/templates/researcher_management.html
+++ b/simcon_project/templates/researcher_management.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
-{% extends "student_base.html" %}
+{% extends "researcher_base.html" %}
+{% block nav-researcherManagementView %}<strong class="nav_bar_selected"> Researchers </strong>{% endblock %}
 {% load static %}
-{% block nav-studentView %}<strong class="nav_bar_selected"> Home </strong>{% endblock %}
 {% load render_table from django_tables2 %}
 {% block content %}
     <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
         <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
-        <title>
-            SimCon | Home
-        </title>
 
+        <title>
+            {% block title %} SimCon | Researcher Management{% endblock %}
+        </title>
     </head>
     <body>
-    <div class="container-fluid mt-3" style="width: 95%">
-        <div class="row">
-            <div class="col" style="text-align: center;">
-                {% if incomplete_table %}
-                    <h2>Current Assignments</h2>
-                    {% render_table incomplete_table %}
-                {% else %}
-                    <span> No Templates to Complete </span>
-                {% endif  %}
-            </div>
-            <div class="col"  style="text-align: center;">
-                {% if completed_table %}
-                    <h2>Completed Conversations</h2>
-                    {% render_table completed_table %}
-                {% else %}
-                    <span> No Completed Templates </span>
-                {% endif  %}
-            </div>
+    <div class="container-fluid mt-3" style="width: 80%">
 
-        </div>
-    </div><!-- /container -->
+        {% if add_researcher_form %}
+            <form id="add_researcher_form" method="post">
+                {% csrf_token %}
+                {{ add_researcher_form.email }}
+                <button type="submit" class="btn btn-outline-secondary" form="add_researcher_form" name="add_researcher">Send Registration Email</button>
+            </form>
+        {% endif %}
+
+        <br>
+
+        {% if researchers_table %}
+            {% render_table researchers_table %}
+        {% endif %}
+
+        <br>
+
+        {% for message in messages %}
+            <div class="alert alert-warning">
+                <a class="close" href="#" data-dismiss="alert">×</a>
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
 
     <div class="modal fade" tabindex="-1" role="dialog" id="create_modal">
         <div class="modal-dialog" role="document">
@@ -50,6 +54,7 @@
             <div class="modal-content"></div>
         </div>
     </div>
+
     <script type="text/javascript">
         $(document).ready(function() {
             $(".bs-modal").each(function () {
