--- a/simcon_project/templates/student_delete_modal.html
+++ b/simcon_project/templates/student_delete_modal.html
@@ -3,7 +3,7 @@
   {% csrf_token %}
 
   <div class="modal-header">
-    <h3 class="modal-title">Delete Template</h3>
+    <h3 class="modal-title">Delete Student</h3>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
